--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-My GitHub page 
+<h1 style="background-color : #3262ff;">My GitHub page</h1>
+<style type="text/css"></style>
+
+This is the first entry
