--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<h1 style="background-color : #3262ff;">My GitHub page</h1>
+<body style="background-color : #ccffff;">
+<h1 style="left : 2000px;">My GitHub page</h1>
 <style type="text/css"></style>
+<div class="content" align="center" style="font-family:sans-serif; font-size : 12px;"></div>
 
-This is the first entry
+This is the first line
+
+</body>
+
+
+
