--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <div class="content" align="center" style="font-family:sans-serif; font-size : 12px;"></div>
 
 This is the first line <br>
-This is the second line
+This is the second line <br>
+This is 
+<a href="page-1.html">a reference</a> to another page.
 </body>
 
 
