--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title> developer's blog</title>
+<style type="text/css">
+body {
+margin-left:  15%;
+margin-right: 10%;
+background  : white;
+color : black;
+}
+
+</style>
+
+</head>
+
 <body style="background-color : #ccffff;">
+
 <h1 style="left : 2000px;">My GitHub page</h1>
-<style type="text/css"></style>
+
 <div class="content" align="center" style="font-family:sans-serif; font-size : 12px;"></div>
 
 This is the first line <br>
@@ -8,6 +25,6 @@ This is the second line <br>
 This is 
 <a href="page-1.html">a reference</a> to another page.
 </body>
-
+</html>
 
 
