added more style

--- a/index.html
+++ b/index.html
@@ -3,27 +3,55 @@
 <head>
 <title> developer's blog</title>
 <style type="text/css">
+
 body {
-margin-left:  15%;
-margin-right: 10%;
-background  : white;
-color : black;
-}
+    margin-left: 15%;
+    margin-right: 10%;
+    background-color : #ccffff;
+    color : black;
+  }
+
+
+h1 {
+    border-bottom-color : #000000;
+    border-bottom-style : solid;
+    border-bottom-width : 1px;
+    border-top-width : 1px;
+    color : dark-blue;
+    font-variant : small-caps;
+  }
+
+
+h2 {
+    font-variant : small-caps;
+    color : dark-blue;
+  }
+
+
+p {
+    border-bottom-width : 1px;
+    color : #cc0000;
+    font-family : ;
+    font-size : 3px;
+    font-style : italic;
+  }
 
 </style>
 
 </head>
 
-<body style="background-color : #ccffff;">
+<body>
 
-<h1 style="left : 2000px;">My GitHub page</h1>
+<h1>My GitHub page</h1>
 
-<div class="content" align="center" style="font-family:sans-serif; font-size : 12px;"></div>
-
+<p>Sat Feb 28 19:04:37 EST 2009</p>
+<div>
 This is the first line <br>
 This is the second line <br>
-This is 
-<a href="page-1.html">a reference</a> to another page.
+This is <a href="page-1.html">a reference</a> to another page.
+Some mathematics : <br>
+&Sigma
+</div> 
 </body>
 </html>
 
