added more style

--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
 <title> developer's blog</title>
 <style type="text/css">
 
-body {
-    margin-left: 15%;
-    margin-right: 10%;
-    background-color : #ccffff;
-    color : black;
-  }
 
 
 h1 {
@@ -17,7 +11,6 @@ h1 {
     border-bottom-style : solid;
     border-bottom-width : 1px;
     border-top-width : 1px;
-    color : dark-blue;
     font-variant : small-caps;
   }
 
@@ -25,15 +18,36 @@ h1 {
 h2 {
     font-variant : small-caps;
     color : dark-blue;
+    border-bottom-width : 1px;
+  }
+
+
+h3 {
+    border-bottom-color : #000000;
+    border-bottom-style : solid;
+    border-bottom-width : 1px;
+    color : #0000cc;
+    font-family : 'Sans Serif';
+    font-size : 16px;
+    font-weight : bold;
   }
 
 
 p {
     border-bottom-width : 1px;
     color : #cc0000;
-    font-family : ;
-    font-size : 5px;
-    font-style : italic;
+    font-family : , 'Sans Serif',;
+    font-size : 10px;
+    height : 2px;
+  }
+
+body {
+    margin-left: 15%;
+    margin-right: 10%;
+    background-color : #ccffff;
+    color : black;
+    font-family : , 'Sans Serif',;
+    font-size : 14px;
   }
 
 </style>
@@ -44,13 +58,14 @@ p {
 
 <h1>My GitHub page</h1>
 
-<p>Sat Feb 28 19:04:37 EST 2009</p>
+<P>Sat Feb 28 19:04:37 EST 2009</p>
+<h3> My first post </h3>
 <div>
 This is the first line <br>
 This is the second line <br>
 This is <a href="page-1.html">a reference</a> to another page.
 Some mathematics : <br>
-&Sigma
+
 </div> 
 </body>
 </html>
