--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ h1 {
     border-bottom-style : solid;
     border-bottom-width : 1px;
     border-top-width : 1px;
+    font-family : 'Sans Serif';
     font-variant : small-caps;
+    font-size : 24px;
   }
 
 
@@ -28,7 +30,7 @@ h3 {
     border-bottom-width : 1px;
     color : #0000cc;
     font-family : 'Sans Serif';
-    font-size : 16px;
+    font-size : 18px;
     font-weight : bold;
   }
 
@@ -43,11 +45,11 @@ p {
 
 body {
     margin-left: 15%;
-    margin-right: 10%;
+    margin-right: 30%;
     background-color : #ccffff;
     color : black;
     font-family : , 'Sans Serif',;
-    font-size : 14px;
+    font-size : 16px;
   }
 
 </style>
