--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ h1 {
     border-top-width : 1px;
     font-family : 'Sans Serif';
     font-variant : small-caps;
-    font-size : 24px;
   }
 
 
@@ -21,6 +20,11 @@ h2 {
     font-variant : small-caps;
     color : dark-blue;
     border-bottom-width : 1px;
+    border-bottom-color : #000000;
+    border-bottom-style : solid;
+    color : #0000cc;
+    font-family : 'Sans Serif';
+    font-weight : bold;
   }
 
 
@@ -30,7 +34,7 @@ h3 {
     border-bottom-width : 1px;
     color : #0000cc;
     font-family : 'Sans Serif';
-    font-size : 18px;
+    font-size : 20px;
     font-weight : bold;
   }
 
@@ -61,7 +65,7 @@ body {
 <h1>My GitHub page</h1>
 
 <P>Sat Feb 28 19:04:37 EST 2009</p>
-<h3> My first post </h3>
+<h2> My first post </h2>
 <div>
 This is the first line <br>
 This is the second line <br>
