--- a/a-second-post.html
+++ b/a-second-post.html
@@ -147,7 +147,7 @@
   <p>Mon Mar 23 21:50:42 Est 2009 </p>
   <h2> A second post  </h2>
   <div>
-      A second post written today. Let&#039; see if this works
+      A second post written today. Let' see if this works
  
   </div>
   </div>
