--- a/the-reason-for-doing-this.html
+++ b/the-reason-for-doing-this.html
@@ -147,8 +147,13 @@
   <p>Mon Mar 23 22:17:42 Est 2009 </p>
   <h2> The reason for doing this  </h2>
   <div>
-      the reason for doing this is as follows :.....
- 
+            
+<h3> a new header </h3>
+the reason for doing this is as follows : <br>
+<li>
+reason number 1
+</li>    
+That's it !  
   </div>
   </div>
 </div><!-- end of main area -->
