--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-<title> On Coding</title>
+<title> Notes On Programming</title>
 <style type="text/css">
   body{
       margin:0px;
@@ -18,14 +18,14 @@ a{
    margin:1px;
    width:100%;
    border:none;
-   color:darkblue; 
+   color:#0000cc;
    text-decoration:none;
    }
 a:hover{
          color:orange;
          }
 a:visited{
-           color:darkblue;
+           color:#0000cc;
            }
 
 #logo{padding:0px;margin:0px;}
@@ -64,9 +64,8 @@ a:visited{
                padding:13px 50px 10px 5%;
                width:68%;}
   div#sideBar{
-               margin:0px 1em 0px 0px;
-               padding:0px;
-               text-align:right;
+               margin:0px 0px 0px 0px;
+               text-align:left;
                font-family : 'Sans Serif';
                font-size : 12px;
                
@@ -82,23 +81,26 @@ a:visited{
                text-align:left;}
 }
 
-#header{
-         padding:0px 0px 8px 0px;
-         margin:0px 0px 20px 0px;
-         #border-bottom:solid 1px #eeeeee;
-         #border-top:solid 2px #FFEBCD;
-         #background:#FFEBCD;color:#8B4513;
-         }
+div#header{
+            padding:0px 0px 8px 0px;
+            #margin:0px 0px 20px 0px;
+            #border-bottom:solid 1px #eeeeee;
+            #border-top:solid 2px #FFEBCD;
+            #background:#FFEBCD;color:#8B4513;
+            }
+
+
 h1,h2,h3,h4,h5,h6{
                    padding:0px;margin:0px;
                    }
 
 h1{
-    margin:40px 0px 0px 0px;
+    #margin:0px 0px 0px 0px;
+    padding:0px 0px 0px 0px;
     color: #0000cc;
     font:bold 200% Verdana,Sans-Serif;
     float:right;
-    width:55%;
+    width:30%;
     }
 
 h2 {
@@ -161,6 +163,14 @@ h2.sidebar-title{
               color:#9E5205
               ;background:transparent;font:bold 85% Verdana,Sans-Serif;
               }
+#sideBar a{
+            margin:20px 20px 20px 20px;
+            width:80%;
+            color:#0000cc;
+            text-decoration:none;
+            font-family : , 'Sans Serif',;
+            font-size : 14px;
+            }
 #sideBar ul a{padding:2px;margin:1px;width:100%;border:none;
                color:#999999;
                text-decoration:none;}
@@ -183,19 +193,21 @@ pre,code{
 strike{color:#999999;}
 .bug{padding:5px;border:0px;}
 .byline{padding:0px;margin:0px;color:#444444;font-size:80%;}
-.byline a{border:none;color:#FF4500;text-decoration:none;}
+
 .byline a:hover{text-decoration:underline;}
+
 
 
 </style>
 </head>
 
-<div id="headerx">
-  <h1>On Coding</h1>
-</div>
-<body>
 
-<div id="mainClm">
+<body>
+  <div id="mainClm">
+    <h1>Notes On Programming</h1>
+    <br>
+    <br>
+    <br>
       
 
   
@@ -236,6 +248,15 @@ a
 
 </div><!-- end of main area -->
 <!-- start of the sidebar -->
+
+<div id="sideBar">
+  <br>
+  <br>
+  <div id="about">
+    <a href="/about.html"> About </a>
+  </div>
+  <br>
+</div> <!--end of sidebar-->
 
 </body>
 
