--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style type="text/css">
   body{
       margin:0px;
-      padding:0px;
+      padding:0x;
       background:#ffffff;
       color:#000011;
       font:0.9em Sans-Serif;
@@ -131,7 +131,7 @@ h6{
     }
 
 p {
-    border-bottom-width : 1px;
+    border-bottom-width : 4px;
     color : #cc0000;
     font-family : , 'Sans Serif',;
     font-size : 10px;
@@ -180,15 +180,19 @@ h2.sidebar-title{
 #sideBar ul a:hover{color:#red;text-decoration:none;}
 
 pre,code{
-          border: 0.15em solid #ff3300;
-          border-left: 0.3em solid #ff3300;
+          border: 0.15em solid #D6D6D6;
+          border-left: 0.3em solid #D6D6D6;
           display: block
           padding: 1em 1em 1em 1em;
           color:#330066;
-          background:#CCCFFF
+          background:#EDEDED;
           }
 #post { 
-                background:#F5F5F5
+        
+        margin:  1em 1em 1em 1em;
+        padding: 1em 1em 1em 1em;
+        border: 0.1em solid #D6D6D6;
+        background:#F5F5F5
         }
 strike{color:#999999;}
 .bug{padding:5px;border:0px;}
