--- a/index.html
+++ b/index.html
@@ -188,10 +188,9 @@ pre,code{
           background:#EDEDED;
           }
 #post { 
-        
         margin:  1em 1em 1em 1em;
         padding: 1em 1em 1em 1em;
-        border: 0.1em solid #D6D6D6;
+        border: 0.1em solid #FF8000;
         background:#F5F5F5
         }
 strike{color:#999999;}
