--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@ a:visited{
 
 #logo{padding:0px;margin:0px;}
 
-#intro-edit {  }
+#edit-header {                
+               margin:10px 10px 10px 10px;
+               }
+
+#edit-header h1 { 
+                  margin:10px 10px 10px 10px;
+                  }
+#intro-edit {  
+              margin:0px 0px 0px 0px;
+}
+
 #intro-edit input {  
                     margin:20px 20px 20px 20px;
                     text-align:left;
@@ -96,7 +106,7 @@ h1,h2,h3,h4,h5,h6{
 
 h1{
     #margin:0px 0px 0px 0px;
-    padding:0px 0px 0px 0px;
+    padding:5px 5px 5px 5px;
     color: #0000cc;
     font:bold 200% Verdana,Sans-Serif;
     float:right;
@@ -193,6 +203,14 @@ pre,code{
         border: 0.1em solid #FF8000;
         background:#F5F5F5
         }
+p#footer { 
+           color:#bbb;
+           font-size:.75em;
+           margin-top: 3em;
+           text-align: center;
+           text-indent: 0;
+           }
+p#footer a { color:#999; }
 strike{color:#999999;}
 .bug{padding:5px;border:0px;}
 .byline{padding:0px;margin:0px;color:#444444;font-size:80%;}
@@ -251,18 +269,23 @@ a
     
   </div>
   
+  <p id="footer">
+    Powered by <a href="http://www.github.com/fons/cl-bliky"> cl-bliky </a>
+  </p>
 
-</div><!-- end of main area -->
-<!-- start of the sidebar -->
-
-<div id="sideBar">
+  </div><!-- end of main area -->
+  
+  <!-- start of the sidebar -->
+  
+  <div id="sideBar">
+    <br>
+    <br>
+    <div id="about">
+      <a href="/about.html"> <h4> About</h4> </a>
+    </div>
   <br>
-  <br>
-  <div id="about">
-    <a href="/about.html"> About </a>
-  </div>
-  <br>
-</div> <!--end of sidebar-->
+  <h4> Code</h4>
+  </div> <!--end of sidebar-->
 
 </body>
 
