--- a/test-677.html
+++ b/test-677.html
@@ -14,8 +14,8 @@
       }
 
 a{
-   padding:2px;
-   margin:1px;
+   #padding:2px;
+   margin:0px 0px 0px 0px;
    width:100%;
    border:none;
    color:#0000cc;
@@ -31,33 +31,50 @@ a:visited{
 #logo{padding:0px;margin:0px;}
 
 #edit-header {                
-               margin:10px 10px 10px 10px;
+               margin:0px 0px 0px 0px;
                }
 
 #edit-header h1 { 
-                  margin:10px 10px 10px 10px;
+                  margin:0px 0px 0px 0px;
+
                   }
+
+#intro-buttons {  
+                 margin:8px 0px 8px 0px;
+                 background:#caff70;
+                 border:solid 1px #cd0000;
+}
+
+#intro-buttons input {  
+                      margin:2px 0px 2px 0px;
+                      text-align:left;
+                      #width:100%;
+                      font-family : 'Sans Serif';
+                      font-size : 12px;
+                      background:#F5F5F5;
+                      }                       
+
+
 #intro-edit {  
               margin:0px 0px 0px 0px;
 }
 
 #intro-edit input {  
-                    margin:20px 20px 20px 20px;
+                    margin:20px 0px 20px 0px;
                     text-align:left;
-                    width:80%;
+                    width:100%;
                     font-family : 'Sans Serif';
                     font-size : 12px;
-                    background:#ffffff;
+                    background:#F5F5F5;
                     }                       
 
 #intro-edit textarea {  
-                       padding:0px 0px 0px 0px;
-                       margin:20px 20px 20px 20px;
+                       margin:20px 0px 20px 0px;
                        text-align:left;
-                       width:80%;
+                       width:100%;
                        font-family : 'Sans Serif';
                        font-size : 12px;
-                       background:#ffffff;
+                       background:#F5F5F5;
                        }                       
 
 #intro-edit h2 {
@@ -136,16 +153,20 @@ h4 {
 
 
 h6{
-    color:#FF4500;
-    font:bold 125% Verdana,Sans-Serif;
+    margin:4px 0px 0px 0px;
+    color:#0000cc;
+    font-family : 'Sans Serif';
+    font-size : 10px;
+    font-weight : normal;
     }
 
 p {
+    margin:0px 0px 18px 0px;
     border-bottom-width : 4px;
     color : #cc0000;
     font-family : , 'Sans Serif',;
     font-size : 10px;
-    height : 2px;
+    height : 4px;
     }
 
 h2.sidebar-title{
@@ -248,8 +269,12 @@ a
 	</div>
 	<p>Tues May 19 9:17:48 Est 2009 </p>
       </div>
-    </div><!-- end of main area -->
+
+    <p id="footer">
+      Powered by <a href="http://www.github.com/fons/cl-bliky"> cl-bliky </a>
+    </p>
     
+    </div><!-- end of main area -->
 
     <!-- start of the sidebar -->
     
