--- a/a-test-entry.html
+++ b/a-test-entry.html
@@ -176,18 +176,21 @@ h2.sidebar-title{
                   padding:0px;
                   border:none;
                   background:#ffffff;}
+
 #sideBar ul{
              margin:0px 0px 33px 0px;
              padding:0px 0px 0px 0px;
              list-style-type:none;
              font-size:95%;}
-#sideBar li
-{margin:0px 0px 0px 0px;
-  padding:0px 0px 0px 0px;
-  list-style-type:none;
-  font-size:105%;
-  color:#9E5205
-  }
+
+#sideBar li {
+              margin:0px 0px 0px 0px;
+              padding:0px 0px 0px 0px;
+              list-style-type:none;
+              font-size:105%;
+              color:#9E5205
+              }
+
 #description{
               padding:0px 0px 0px 5%;
               margin:0px;
@@ -195,13 +198,14 @@ h2.sidebar-title{
               ;background:transparent;font:bold 85% Verdana,Sans-Serif;
               }
 #sideBar a{
-            margin:20px 20px 20px 20px;
-            width:80%;
+            margin:0px 0px 0px 0px;
+            #width:80%;
             color:#0000cc;
             text-decoration:none;
             font-family : , 'Sans Serif',;
             font-size : 14px;
             }
+
 #sideBar ul a{padding:2px;margin:1px;width:100%;border:none;
                color:#999999;
                text-decoration:none;}
@@ -269,14 +273,17 @@ strike{color:#999999;}
     </div><!-- end of main area -->
 
     <!-- start of the sidebar -->
-    
     <div id="sideBar">
-      <br>
-      <br>
-      <div id="about">
-	<a href="/about.html"> About </a>
-      </div>
-      <br>
-    </div> <!--end of sidebar-->
+
+    <br>
+    <br>
+    <div id="about">
+      <a href="/about.html"> <h4> About</h4> </a>
+    </div>
+    <br>
+  <h4> Code</h4>
+
+    </div>
+    <!--end of sidebar-->
   </body>
 </html>
