--- a/a-test-entry.html
+++ b/a-test-entry.html
@@ -169,13 +169,15 @@ p {
     height : 4px;
     }
 
-h2.sidebar-title{
-                  margin:0px;
-                  color:#FF4500;
-                  font:bold 125% Verdana,Sans-Serif;
-                  padding:0px;
-                  border:none;
-                  background:#ffffff;}
+#sideBar h2{
+             margin:0px;
+             color:#0000cc;
+             font-family : , 'Sans Serif',;
+             padding:0px;
+             border:none;
+             background:#ffffff;
+             font-size : 14px;
+             }
 
 #sideBar ul{
              margin:0px 0px 33px 0px;
@@ -272,18 +274,5 @@ strike{color:#999999;}
     
     </div><!-- end of main area -->
 
-    <!-- start of the sidebar -->
-    <div id="sideBar">
-
-    <br>
-    <br>
-    <div id="about">
-      <a href="/about.html"> <h4> About</h4> </a>
-    </div>
-    <br>
-  <h4> Code</h4>
-
-    </div>
-    <!--end of sidebar-->
   </body>
 </html>
