--- a/file-upload-test.html
+++ b/file-upload-test.html
@@ -157,7 +157,7 @@ h6{
     color:#0000cc;
     font-family : 'Sans Serif';
     font-size : 10px;
-    font-weight : normal;
+    font-weight : bold;
     }
 
 p {
@@ -258,6 +258,7 @@ strike{color:#999999;}
       <br>
       <br>
       <div id="post">
+	<p>Wed May 20 12:2:13 Est 2009 </p>
 	<h2> file upload test  </h2>
 	<div id="intro">
 	                    intro of file upload test<br> 
@@ -387,7 +388,6 @@ if __name__ == "__main__" :
 
             
 	</div>
-	<p>Wed May 20 12:2:13 Est 2009 </p>
       </div>
 
     <p id="footer">
