--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ h6{
     color:#0000cc;
     font-family : 'Sans Serif';
     font-size : 10px;
-    font-weight : normal;
+    font-weight : bold;
     }
 
 p {
@@ -369,6 +369,9 @@ a
       <a href="/about.html"> <h2> About </h2> </a>
       
       
+    </div>
+    <div id="contact">
+      <a href="mailto:programmer.notes@gmail.com" <h2> Contact </h2> </a> 
     </div>
     <br>
     <div id="code">
