--- a/a-new-blog-post.html
+++ b/a-new-blog-post.html
@@ -157,7 +157,7 @@ h6{
     color:#0000cc;
     font-family : 'Sans Serif';
     font-size : 10px;
-    font-weight : normal;
+    font-weight : bold;
     }
 
 p {
@@ -258,6 +258,7 @@ strike{color:#999999;}
       <br>
       <br>
       <div id="post">
+	<p>Fri May 22 13:45:51 Est 2009 </p>
 	<h2> A new blog post  </h2>
 	<div id="intro">
 	    
@@ -265,7 +266,6 @@ strike{color:#999999;}
 	<div id="body">
 	     
 	</div>
-	<p>Fri May 22 13:45:51 Est 2009 </p>
       </div>
 
     <p id="footer">
