--- a/a-test-entry.html
+++ b/a-test-entry.html
@@ -157,7 +157,7 @@ h6{
     color:#0000cc;
     font-family : 'Sans Serif';
     font-size : 10px;
-    font-weight : normal;
+    font-weight : bold;
     }
 
 p {
@@ -258,6 +258,7 @@ strike{color:#999999;}
       <br>
       <br>
       <div id="post">
+	<p>Mon Apr 20 18:57:56 Est 2009 </p>
 	<h2> A test entry  </h2>
 	<div id="intro">
 	     This is the intro 
@@ -265,7 +266,6 @@ strike{color:#999999;}
 	<div id="body">
 	     this is the main body  
 	</div>
-	<p>Mon Apr 20 18:57:56 Est 2009 </p>
       </div>
 
     <p id="footer">
