--- a/code.html
+++ b/code.html
@@ -157,7 +157,7 @@ h6{
     color:#0000cc;
     font-family : 'Sans Serif';
     font-size : 10px;
-    font-weight : normal;
+    font-weight : bold;
     }
 
 p {
@@ -258,6 +258,7 @@ strike{color:#999999;}
       <br>
       <br>
       <div id="post">
+	<p>Fri May 22 14:21:8 Est 2009 </p>
 	<h2> Code  </h2>
 	<div id="intro">
 	     <ul>
@@ -268,7 +269,6 @@ strike{color:#999999;}
 	<div id="body">
 	       
 	</div>
-	<p>Fri May 22 14:21:8 Est 2009 </p>
       </div>
 
     <p id="footer">
