--- a/test-677.html
+++ b/test-677.html
@@ -157,7 +157,7 @@ h6{
     color:#0000cc;
     font-family : 'Sans Serif';
     font-size : 10px;
-    font-weight : normal;
+    font-weight : bold;
     }
 
 p {
@@ -258,6 +258,7 @@ strike{color:#999999;}
       <br>
       <br>
       <div id="post">
+	<p>Tues May 19 9:17:48 Est 2009 </p>
 	<h2> test 677  </h2>
 	<div id="intro">
 	        start of a list :<br> 
@@ -273,7 +274,6 @@ a
 	<div id="body">
 	               this is the body          
 	</div>
-	<p>Tues May 19 9:17:48 Est 2009 </p>
       </div>
 
     <p id="footer">
