--- a/new-side-bar-element.html
+++ b/new-side-bar-element.html
@@ -258,13 +258,13 @@ strike{color:#999999;}
       <br>
       <br>
       <div id="post">
-	<p>Mon May 25 10:23:58 Est 2009 </p>
-	<h2> new blog post number 2  </h2>
+	<p>Wed May 27 21:59:56 Est 2009 </p>
+	<h2> new side bar element  </h2>
 	<div id="intro">
-	       intro tbd
+	    intro to sidebar element
 	</div>
 	<div id="body">
-	          body tbd 
+	     
 	</div>
       </div>
 
