--- a/about.html
+++ b/about.html
@@ -258,12 +258,16 @@ strike{color:#999999;}
       <br>
       <br>
       <div id="post">
+	<div "post-timestamp">
 	<p>Fri May 22 13:41:52 Est 2009 </p>
+	</div>
+	<div id="post-header">
 	<h2> About  </h2>
-	<div id="intro">
+	</div>
+	<div id="post-intro">
 	     This is mostly concerned with programming 
 	</div>
-	<div id="body">
+	<div id="post-body">
 	       
 	</div>
       </div>
