--- a/new-blog-post-number-2.html
+++ b/new-blog-post-number-2.html
@@ -258,12 +258,16 @@ strike{color:#999999;}
       <br>
       <br>
       <div id="post">
+	<div "post-timestamp">
 	<p>Mon May 25 10:23:58 Est 2009 </p>
+	</div>
+	<div id="post-header">
 	<h2> new blog post number 2  </h2>
-	<div id="intro">
+	</div>
+	<div id="post-intro">
 	       intro tbd
 	</div>
-	<div id="body">
+	<div id="post-body">
 	          body tbd 
 	</div>
       </div>
