--- a/new-sidebar-element.html
+++ b/new-sidebar-element.html
@@ -259,18 +259,16 @@ strike{color:#999999;}
       <br>
       <div id="post">
 	<div "post-timestamp">
-	<p>Wed May 27 21:24:12 Est 2009 </p>
+	<p>Thu May 28 19:0:39 Est 2009 </p>
 	</div>
 	<div id="post-header">
-	<h2> Code  </h2>
+	<h2> new sidebar element  </h2>
 	</div>
 	<div id="post-intro">
-	  <ul>
-<li> <a href="http://github.com/fons/cl-bliky/tree/master/"> cl-bliky </a>
-</ul> 
+	       This is the intro 
 	</div>
 	<div id="post-body">
-	       
+	       This is the bodey  
 	</div>
       </div>
 
