--- a/sample-upload-header.html
+++ b/sample-upload-header.html
@@ -258,13 +258,17 @@ strike{color:#999999;}
       <br>
       <br>
       <div id="post">
+	<div "post-timestamp">
 	<p>Thu May 28 18:39:42 Est 2009 </p>
+	</div>
+	<div id="post-header">
 	<h2> Sample Upload Header  </h2>
-	<div id="intro">
+	</div>
+	<div id="post-intro">
 	   This is the introduction
  
 	</div>
-	<div id="body">
+	<div id="post-body">
 	   This is the main part
 
 
