--- a/about.html
+++ b/about.html
@@ -259,7 +259,7 @@ strike{color:#999999;}
       <br>
       <div id="about">
 	<div id="post-type" style="visibility:hidden">
-	  "about"
+	  <p>"about"</p>
 	</div>
 	<div id="post-timestamp" >
 	<p>Fri May 22 13:41:52 Est 2009 </p>
@@ -276,7 +276,7 @@ strike{color:#999999;}
 	   
 	</div>
 	<div id="post-timestamp-id" style="visibility:hidden">
-	<p>3452002912 </p>
+	  <p>3452002912 </p>
 	</div>
       </div>
       
