--- a/code.html
+++ b/code.html
@@ -259,7 +259,7 @@ strike{color:#999999;}
       <br>
       <div id="sidebar">
 	<div id="post-type" style="visibility:hidden">
-	  "sidebar"
+	  <p>"sidebar"</p>
 	</div>
 	<div id="post-timestamp" >
 	<p>Wed May 27 21:24:12 Est 2009 </p>
@@ -278,7 +278,7 @@ strike{color:#999999;}
 	     
 	</div>
 	<div id="post-timestamp-id" style="visibility:hidden">
-	<p>3452462652 </p>
+	  <p>3452462652 </p>
 	</div>
       </div>
       
