--- a/new-blog-post-number-2.html
+++ b/new-blog-post-number-2.html
@@ -259,7 +259,7 @@ strike{color:#999999;}
       <br>
       <div id="post">
 	<div id="post-type" style="visibility:hidden">
-	  "post"
+	  <p>"post"</p>
 	</div>
 	<div id="post-timestamp" >
 	<p>Mon May 25 10:23:58 Est 2009 </p>
@@ -278,7 +278,7 @@ strike{color:#999999;}
 	 
 	</div>
 	<div id="post-timestamp-id" style="visibility:hidden">
-	<p>3452250238 </p>
+	  <p>3452250238 </p>
 	</div>
       </div>
       
