--- a/new-sidebar-element.html
+++ b/new-sidebar-element.html
@@ -259,7 +259,7 @@ strike{color:#999999;}
       <br>
       <div id="sidebar">
 	<div id="post-type" style="visibility:hidden">
-	  "sidebar"
+	  <p>"sidebar"</p>
 	</div>
 	<div id="post-timestamp" >
 	<p>Thu May 28 19:0:39 Est 2009 </p>
@@ -278,7 +278,7 @@ strike{color:#999999;}
 	 
 	</div>
 	<div id="post-timestamp-id" style="visibility:hidden">
-	<p>3452540439 </p>
+	  <p>3452540439 </p>
 	</div>
       </div>
       
