--- a/sample-upload-header.html
+++ b/sample-upload-header.html
@@ -259,7 +259,7 @@ strike{color:#999999;}
       <br>
       <div id="post">
 	<div id="post-type" style="visibility:hidden">
-	  "post"
+	  <p>"post"</p>
 	</div>
 	<div id="post-timestamp" >
 	<p>Thu May 28 18:39:42 Est 2009 </p>
@@ -283,7 +283,7 @@ strike{color:#999999;}
 	  
 	</div>
 	<div id="post-timestamp-id" style="visibility:hidden">
-	<p>3452539182 </p>
+	  <p>3452539182 </p>
 	</div>
       </div>
       
