message_ok_Thu_Jun_4_18:17:7_Est_2009

--- a/index.html
+++ b/index.html
@@ -341,10 +341,11 @@ strike{color:#999999;}
       <h2> Code </h2>
       <div>
 	 This is a list of the code
-<ul>
- <li> <a href="http://github.com/fons/cl-bliky/tree/master/"> cl-bliky </a></li>
-</ul>   
-      
+<UL>
+<LI><A HREF="http://github.com/fons/cl-bliky/tree/master/"> cl-bliky </A></LI>
+</UL> 
+<h2> Please pay Attention !!</h2>
+This is the end of the post.
 	</div>
       <div>
 	   
