--- a/code.html
+++ b/code.html
@@ -268,16 +268,14 @@ strike{color:#999999;}
 	<h2> Code  </h2>
 	</div>
 	<div id="post-intro">
-	   This is a list of the code
-<UL>
-<LI><A HREF="http://github.com/fons/cl-bliky/tree/master/"> cl-bliky </A></LI>
-</UL>
+	  This is a list of the code
+<UL><LI><A HREF="http://github.com/fons/cl-bliky/tree/master/"> cl-bliky </A></LI></UL>
 There is something going on here I don't like
 <H2> Please pay Attention !!</H2>
-This is the end of the post. 
+This is the end of the post.
 	</div>
 	<div id="post-body">
-	     
+	   
 	</div>
 	<div id="post-timestamp-id" style="visibility:hidden">
 	  <p>3452462652 </p>
