--- a/new-blog-post-dd-sat-jun-20-20459-est-2009.html
+++ b/new-blog-post-dd-sat-jun-20-20459-est-2009.html
@@ -424,24 +424,24 @@ strike{color:#999999;}
     </div>
     
     <div id="mainClm">
-      <div id="about">
+      <div id="sidebar">
 	<div id="post-type" style="visibility:hidden">
-	  <p>"about"</p>
+	  <p>"sidebar"</p>
 	</div>
 	<div id="post-timestamp" >
-	  <p>Fri May 22 13:41:52 Est 2009 </p>
+	  <p>Sat Jun 20 20:4:59 Est 2009 </p>
 	</div>
 	<div id="post-header">
-	  <h2> About  </h2>
+	  <h2> new blog post dd Sat Jun 20 20:4:59 Est 2009  </h2>
 	</div>
 	<div id="post-intro">
-	  <p>This is mostly concerned with programming </p>
+	  
 	</div>
 	<div id="post-body">
 	   
 	</div>
 	<div id="post-timestamp-id" style="visibility:hidden">
-	  <p>3452002912 </p>
+	  <p>3454531499 </p>
 	</div>
       </div>
 
