--- a/sample-upload-header.html
+++ b/sample-upload-header.html
@@ -19,7 +19,7 @@ body{
       margin:0px;
       padding:0x;
       #background:#ffffff;
-      #background:#eee9e9;
+      background:#eee9e9;
       #background:#fffacd;
           
       #color:#000011;
@@ -32,7 +32,7 @@ p {
     margin:0px;
     padding:0x;
     #background:#ffffff;
-    #background:#eee9e9;
+    background:#eee9e9;
     #color:#000011;
     font-size : 18px;
     font-family : , 'Sans Serif',;
@@ -166,7 +166,7 @@ Comment : This is the sidebar to the left of the page
           text-align:left;
           font-family : 'Sans Serif';
           font-size : 18px;
-          #background:#eee9e9;
+          background:#eee9e9;
           }
 
 #sideBar p {
@@ -175,7 +175,7 @@ Comment : This is the sidebar to the left of the page
              font-family : 'Sans Serif';
              font-size : 14px;
              #background:#ffffff;
-             #background:#eee9e9;
+             background:#eee9e9;
              }
 
 #sideBar h2 {
@@ -241,6 +241,10 @@ the 'general' settings.
         #background:#FFFFE0;
         #background:#F2F2F2;
         #background:#FAFAD2;
+        }
+
+#post p { 
+          background:#F5F5F5;
         }
 
 
@@ -418,7 +422,7 @@ strike{color:#999999;}
     <div id="blog-title">
       <a href="/"> <h1> Notes on Programming </h1> </a> 
     </div>
-
+    
     <div id="mainClm">
       <div id="post">
 	<div id="post-type" style="visibility:hidden">
