--- a/about.html
+++ b/about.html
@@ -46,11 +46,11 @@
 	  <h2> About  </h2>
 	</div>
 	<div id="post-intro">
-	  This web log is concerned mostly with my interest in programming languages, algorithms, machine learning, search or other software endeavors. <br><br>
+	  This web log is concerned mostly with my interest in programming languages, algorithms, machine learning, search or other software endeavors. <BR><BR>
 	</div>
 	<div id="post-body">
-	  The content is my own as well, warts and all. If you can't suppress the urge to contact me, feel free to drop me a line using "contact me" button on the main page. Alternatively you can contact me through my linkedin account (see widget below). <br><br> If your comments concern any of my blog post I will definitely get back to you, provided I have the time and energy and your email was not some deranged rant. Expect reply times up to two weeks. The reply time for all other inquiries depends on the sender, content and mood (mine, not yours) and will range anywhere from 1 minute to never.  
-<p><A HREF="http://www.linkedin.com/in/alfonshaffmans?trk=btn_typepad"><IMG SRC="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.gif" WIDTH="160" HEIGHT="25" BORDER="0" ALT="View Alfons Haffmans' profile on LinkedIn" STYLE="margin-bottom:5px"></A> </p> 
+	  The content is my own as well, warts and all. If you can't suppress the urge to contact me, feel free to drop me a line using "contact me" button on the main page. Alternatively you can contact me through my linkedin account (see widget below). <BR><BR> If your comments concern any of my blog post I will definitely get back to you, provided I have the time and energy and your email was not some deranged rant. Expect reply times up to two weeks. The reply time for all other inquiries depends on the sender, content and mood (mine, not yours) and will range anywhere from 1 minute to never.  
+<P><A HREF="http://www.linkedin.com/in/alfonshaffmans?trk=btn_typepad"><IMG SRC="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.gif" WIDTH="160" HEIGHT="25" BORDER="0" ALT="View Alfons Haffmans' profile on LinkedIn" STYLE="margin-bottom:5px"></A></P> 
 	</div>
 	<div id="post-timestamp-id" style="visibility:hidden">
 	  <p>3452002912 </p>
