--- a/code.html
+++ b/code.html
@@ -46,12 +46,7 @@
 	  <h2> Code  </h2>
 	</div>
 	<div id="post-intro">
-	  <UL>
-<LI><A HREF="http://github.com/fons/cl-bliky/tree/master/">c-bliky</A></LI>
-<LI><A HREF="http://github.com/fons/c_fact/tree/master">c_fact</A></LI>
-<LI><A HREF="http://github.com/fons/dyn_options/tree/master">dyn_options</A></LI>
-<li> <A href="http://github.com/fons/cl-mongo"> cl-mongo </a></li>
-</UL>
+	  <UL><LI><A HREF="http://github.com/fons/cl-bliky/tree/master/">c-bliky</A></LI><LI><A HREF="http://github.com/fons/c_fact/tree/master">c_fact</A></LI><LI><A HREF="http://github.com/fons/dyn_options/tree/master">dyn_options</A></LI><LI><A HREF="http://github.com/fons/cl-mongo"> cl-mongo </A></LI></UL>
 	</div>
 	<div id="post-body">
 	   
